--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,14 @@
 name: open_rf
-description: A sample command-line application.
-version: 1.0.0
+description: A fishing game.
+version: 0.0.0
 # homepage: https://www.example.com
 
 environment:
   sdk: '>=2.17.6 <3.0.0'
 
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+  raylib: ^0.3.0
 
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.16.0
-  raylib: ^0.3.0
